completed exercises on layout flex

--- a/day-1-flexbox/4-pie-flexbox/begin/history.html
+++ b/day-1-flexbox/4-pie-flexbox/begin/history.html
@@ -14,7 +14,7 @@
 		<a href="/"><img src="img/logo.png" alt="Pie in the Sky Bakery, Springdale, VT. Click for home."></a>
 	</header>
 	<nav class="row">
-		<ul>
+		<ul class="full-width">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Menu</a></li>
 			<li><a href="#">Catering</a></li>
@@ -32,7 +32,7 @@
 
 			<p>She got so many orders that her fledgling business soon outgrew her family's kitchen. In 2006, she rented her current location at 34 Main Street, where she and her team of bakers have served up fresh, delicious pies ever since.</p>
 		</article>
-		<div class="col-1">
+		<div class="col-1-4 row">
 			<aside class="sidebar-primary">
 				<h3>Testimonials</h3>
 				<blockquote>
@@ -42,18 +42,21 @@
 			</aside>
 			<aside class="sidebar-secondary">
 				<h3>Pie of the Month</h3>
-				<img src="img/pi-day.jpg" alt="Pi Day Pie with Strawberry filling."></aside>
+				<img src="img/pi-day.jpg" alt="Pi Day Pie with Strawberry filling.">
+			</aside>
 		</div>
 	</div>
 	<footer class="row">
-		<p>Copyright 2015, Pie in the Sky Bakery &#183; 34 Main Street &#183; Springdale, VT &#183; <a href="tel:802-555-7437">(802) 555-PIES</a></p>
-		<p>
-			<a href="http://www.twitter.com" target="_blank"><img src="img/twitter1.png" alt="Twitter."></a>
-			<a href="http://www.pinterest.com" target="_blank"><img src="img/pin2.png" alt="Pinterest."></a>
-			<a href="http://www.tumblr.com" target="_blank"><img src="img/tumblr3.png" alt="Tumblr."></a>
-			<a href="http://www.instagram.com" target="_blank"><img src="img/insta4.png" alt="Instagram."></a>
-			<a href="http://www.facebook.com" target="_blank"><img src="img/fb5.png" alt="Facebook."></a>
-		</p>
+		<div class="col-4">
+			<p>Copyright 2017, Pie in the Sky Bakery &#183; 34 Main Street &#183; Springdale, VT &#183; <a href="tel:802-555-7437">(802) 555-PIES</a></p>
+			<p>
+				<a href="http://www.twitter.com" target="_blank"><img src="img/twitter1.png" alt="Twitter."></a>
+				<a href="http://www.pinterest.com" target="_blank"><img src="img/pin2.png" alt="Pinterest."></a>
+				<a href="http://www.tumblr.com" target="_blank"><img src="img/tumblr3.png" alt="Tumblr."></a>
+				<a href="http://www.instagram.com" target="_blank"><img src="img/insta4.png" alt="Instagram."></a>
+				<a href="http://www.facebook.com" target="_blank"><img src="img/fb5.png" alt="Facebook."></a>
+			</p>
+		</div>
 	</footer>
 
 </div>
