completed mondrian CSS grid exercise

--- a/day-1-flexbox/6-responsive-images/begin/image-exercise.html
+++ b/day-1-flexbox/6-responsive-images/begin/image-exercise.html
@@ -7,8 +7,9 @@
 <body>
 	<!-- visit http://scottjehl.github.io/picturefill/ for picturefill source -->
 	<div class="bkgdimg"></div>
-	<div>
+	<picture>
+		<source srcset="img/peace-pie-orginal.jpg" media="(min-width: 1200px)"> 
 		<img src="img/peace-pie-original.jpg" alt="The original giant peace pie">
-	</div>
+	</picture>
 </body>
 </html>
